Fix layout issues.

--- a/button-style-test/button-style-test.css
+++ b/button-style-test/button-style-test.css
@@ -11,9 +11,9 @@ body {
 }
 
 .button-container {
-    overflow: hidden;
-    margin: 0 10px 10px 0;
-    padding: 0;
+    overflow: auto;
+    margin: 0;
+    padding: 0 10px 10px 0;
 }
 
 button.style-1 {
